@@ -42,4 +42,7 @@ public interface IInstance extends IIsolatedExecutor
     // these methods are not for external use, but for simplicity we leave them public and on the normal IInstance interface
     void startup(ICluster cluster);
     void receiveMessage(IMessage message);
+
+    int getMessagingVersion();
+    void setMessagingVersion(InetAddressAndPort endpoint, int version);
 }
