@@ -141,8 +141,9 @@ public abstract class AbstractCluster<I extends IInstance> implements ICluster, 
         {
             if (!isShutdown)
                 throw new IllegalStateException();
-            delegate().startup(AbstractCluster.this);
+            delegate.startup(AbstractCluster.this);
             isShutdown = false;
+            updateMessagingVersions();
         }
 
         @Override
@@ -250,6 +251,21 @@ public abstract class AbstractCluster<I extends IInstance> implements ICluster, 
                 monitor.waitForAgreement();
             }
         }).run();
+    }
+
+    private void updateMessagingVersions()
+    {
+        for (IInstance reportTo: instances)
+        {
+            for (IInstance reportFrom: instances)
+            {
+                if (reportFrom == reportTo)
+                    continue;
+
+                int minVersion = Math.min(reportFrom.getMessagingVersion(), reportTo.getMessagingVersion());
+                reportTo.setMessagingVersion(reportFrom.broadcastAddressAndPort(), minVersion);
+            }
+        }
     }
 
     /**
